<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="activity_add">Barcode Box 2</string>
	<string name="activity_delete">Barcode Box 2</string>
	<string name="activity_edit">Barcode Box 2</string>
	<string name="activity_export">Barcode Box 2</string>
	<string name="activity_viewer">Barcode Box 2</string>
	<string name="add_dialog_barcode_read_message_first_part">Adding barcode:</string>
	<string name="add_dialog_barcode_read_message_second_part">of type</string>
	<string name="add_dialog_barcode_read_title"></string>
	<string name="add_dialog_barcode_read_button_negative"></string>
	<string name="add_dialog_barcode_read_button_positive">OK</string>
	<string name="add_dialog_duplicate_message">Scanned barcode already exists in database, add anyway? Data:</string>
	<string name="add_dialog_duplicate_title"></string>
	<string name="add_dialog_duplicate_button_negative">No</string>
	<string name="add_dialog_duplicate_button_positive">Yes</string>
	<string name="application_name">Barcode Box 2</string>
	<string name="delete_button_cancel">Cancel</string>
	<string name="delete_button_delete">Delete</string>
	<string name="delete_textview_list_empty">No barcodes yet</string>
	<string name="edit_button_cancel">Cancel</string>
	<string name="edit_button_save">Save</string>
	<string name="edit_spinner_type">Choose a type</string>
	<string name="edit_textview_notes">Notes</string>
	<string name="edit_textview_type">Type</string>
	<string name="edit_textview_value">Value</string>
	<string name="viewer_button_create">Create</string>
	<string name="viewer_button_scan">Scan</string>
	<string name="viewer_dialog_barcode_scanner_prompt_message">This action requires Barcode Scanner. Would you like to install it?</string>
	<string name="viewer_dialog_barcode_scanner_prompt_title">Install Barcode Scanner?</string>
	<string name="viewer_dialog_barcode_scanner_prompt_button_negative">No</string>
	<string name="viewer_dialog_barcode_scanner_prompt_button_positive">Yes</string>
	<string name="viewer_dialog_delete_all_message">Are you sure you want to delete all barcodes?</string>
	<string name="viewer_dialog_delete_all_title"></string>
	<string name="viewer_dialog_delete_all_button_negative">No</string>
	<string name="viewer_dialog_delete_all_button_positive">Yes</string>
	<string name="viewer_dialog_export_barcodes_message">Enter filename (any existing file will be overwritten):</string>
	<string name="viewer_dialog_export_barcodes_title">Export barcodes</string>
	<string name="viewer_dialog_export_barcodes_button_negative">Cancel</string>
	<string name="viewer_dialog_export_barcodes_button_positive">OK</string>
	<string name="viewer_dialog_export_barcodes_complete_message">Export complete.</string>
	<string name="viewer_dialog_export_barcodes_complete_title"></string>
	<string name="viewer_dialog_export_barcodes_complete_button_negative"></string>
	<string name="viewer_dialog_export_barcodes_complete_button_positive">OK</string>
	<string name="viewer_dialog_export_barcodes_error_message">Unknown export error.</string>
	<string name="viewer_dialog_export_barcodes_error_title"></string>
	<string name="viewer_dialog_export_barcodes_error_button_negative"></string>
	<string name="viewer_dialog_export_barcodes_error_button_positive">OK</string>
	<string name="viewer_dialog_invalid_uri_message">Barcode data is not a valid URI.</string>
	<string name="viewer_dialog_invalid_uri_title"></string>
	<string name="viewer_dialog_invalid_uri_button_negative"></string>
	<string name="viewer_dialog_invalid_uri_button_positive">OK</string>
	<string name="viewer_dialog_rapid_scanning_message">You are now entering rapid scanning. Scanned items will be added without prompt. To exit rapid scanning, press the back button.</string>
	<string name="viewer_dialog_rapid_scanning_title">Rapid scanning</string>
	<string name="viewer_dialog_rapid_scanning_button_negative"></string>
	<string name="viewer_dialog_rapid_scanning_button_positive">OK</string>
	<string name="viewer_dialog_sd_card_general_message">SD card is not writeable.</string>
	<string name="viewer_dialog_sd_card_general_title"></string>
	<string name="viewer_dialog_sd_card_general_button_negative"></string>
	<string name="viewer_dialog_sd_card_general_button_positive">OK</string>
	<string name="viewer_dialog_sd_card_removed_message">SD card not present.</string>
	<string name="viewer_dialog_sd_card_removed_title"></string>
	<string name="viewer_dialog_sd_card_removed_button_negative"></string>
	<string name="viewer_dialog_sd_card_removed_button_positive">OK</string>
	<string name="viewer_dialog_sd_card_shared_message">SD card is shared with PC. Unmount SD card and try again.</string>
	<string name="viewer_dialog_sd_card_shared_title"></string>
	<string name="viewer_dialog_sd_card_shared_button_negative"></string>
	<string name="viewer_dialog_sd_card_shared_button_positive">OK</string>
	<string name="viewer_menu_context_delete">Delete</string>
	<string name="viewer_menu_context_edit">Edit</string>
	<string name="viewer_menu_context_launch">Launch</string>
	<string name="viewer_menu_context_share">Share</string>
	<string name="viewer_menu_options_delete_all">Delete all</string>
	<string name="viewer_menu_options_delete_multiple">Delete multiple</string>
	<string name="viewer_menu_options_email_chooser">Send email...</string>
	<string name="viewer_menu_options_export_csv">Export CSV</string>
	<string name="viewer_menu_options_export_email">Email barcodes</string>
	<string name="viewer_menu_options_rapid_scanning">Rapid scanning</string>
	<string name="viewer_textview_list_empty">No barcodes</string>
	<string-array name="types_array">
        <item>QR_CODE</item>
        <item>DATA_MATRIX</item>
        <item>UPC_E</item>
        <item>UPC_A</item>
        <item>EAN_8</item>
        <item>EAN_13</item>
        <item>UPC_EAN_EXTENSION</item>
        <item>CODE_128</item>
        <item>CODE_39</item>
        <item>CODE_93</item>
        <item>CODE_93</item>
        <item>ITF</item>
        <item>RSS14</item>
        <item>PDF417</item>        
        <item>RSS_EXPANDED</item>        
    </string-array>
<!--	From http://code.google.com/p/zxing/source/browse/trunk/core/src/com/google/zxing/BarcodeFormat.java-->
</resources>