<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content" android:layout_width="fill_parent"
	android:orientation="vertical" android:padding="0dip">
	<LinearLayout android:background="@android:drawable/bottom_bar"
		android:id="@+id/viewer_bottom_bar" android:layout_alignParentBottom="true"
		android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:orientation="horizontal" android:paddingBottom="1.0dip"
		android:paddingLeft="4.0dip" android:paddingRight="4.0dip"
		android:paddingTop="5.0dip">
		<Button android:id="@+id/viewer_button_scan"
			android:layout_height="fill_parent" android:layout_weight="1.0"
			android:layout_width="0.0dip" android:text="@string/viewer_button_scan" />
		<Button android:id="@+id/viewer_button_create"
			android:layout_height="fill_parent" android:layout_weight="1.0"
			android:layout_width="0.0dip" android:text="@string/viewer_button_create" />
	</LinearLayout>
	<ListView android:choiceMode="multipleChoice" android:id="@id/android:list"
		android:layout_above="@id/viewer_bottom_bar"
		android:layout_alignParentTop="true" android:layout_height="wrap_content"
		android:layout_width="fill_parent" />
	<TextView android:id="@id/android:empty" android:layout_above="@id/viewer_bottom_bar"
		android:layout_alignParentTop="true" android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:padding="3dip"
		android:text="@string/viewer_textview_list_empty" android:textSize="16sp"
		android:textStyle="bold" />
</RelativeLayout>